// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`geosearch returns the right object 1`] = `
{
  "bbox": [
    -74.007276,
    40.711656,
    -74.005542,
    40.713402,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -74.005542,
          40.713402,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1001220001",
            "bin": "1079146",
            "version": "26c",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.077,
        "gid": "nycpad:venue:8823",
        "housenumber": "52",
        "id": "8823",
        "label": "52 CHAMBERS STREET, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "52 CHAMBERS STREET",
        "neighbourhood": "City Hall Area",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865569",
        "postalcode": "10007",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "8823",
        "street": "CHAMBERS STREET",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.7128,
      "boundary.circle.lon": -74.006,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.7128,
      "point.lon": -74.006,
      "private": false,
      "querySize": 40,
      "size": 20,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object around 3521 Riverdale Ave, The Bronx, NY 10463 1`] = `
{
  "bbox": [
    -73.911405,
    40.880118,
    -73.90957,
    40.881111,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -73.910935,
          40.880753,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "2057380353",
            "bin": "2093895",
            "version": "26c",
          },
        },
        "borough": "Bronx",
        "borough_gid": "whosonfirst:borough:421205773",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "Bronx County",
        "county_a": "BX",
        "county_gid": "whosonfirst:county:102083063",
        "distance": 0.046,
        "gid": "nycpad:venue:699141",
        "housenumber": "3015",
        "id": "699141",
        "label": "3015 RIVERDALE AVENUE, Bronx, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "3015 RIVERDALE AVENUE",
        "neighbourhood": "Kingsbridge",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85869385",
        "postalcode": "10463",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "699141",
        "street": "RIVERDALE AVENUE",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.88067222222222,
      "boundary.circle.lon": -73.91039722222223,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.88067222222222,
      "point.lon": -73.91039722222223,
      "private": false,
      "querySize": 40,
      "size": 20,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object around the Empire State Building 1`] = `
{
  "bbox": [
    -73.985656,
    40.748441,
    -73.984937,
    40.749199,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -73.984937,
          40.748881,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1008360033",
            "bin": "1015876",
            "version": "26c",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.042,
        "gid": "nycpad:venue:88845",
        "housenumber": "1",
        "id": "88845",
        "label": "1 WEST 34 STREET, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "1 WEST 34 STREET",
        "neighbourhood": "Midtown West",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85882233",
        "postalcode": "10001",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "88845",
        "street": "WEST 34 STREET",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.748817,
      "boundary.circle.lon": -73.985428,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.748817,
      "point.lon": -73.985428,
      "private": false,
      "querySize": 40,
      "size": 20,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;

exports[`geosearch returns the right object for string lat/long 1`] = `
{
  "bbox": [
    -74.007276,
    40.711656,
    -74.005542,
    40.713402,
  ],
  "features": [
    {
      "geometry": {
        "coordinates": [
          -74.005542,
          40.713402,
        ],
        "type": "Point",
      },
      "properties": {
        "accuracy": "point",
        "addendum": {
          "pad": {
            "bbl": "1001220001",
            "bin": "1079146",
            "version": "26c",
          },
        },
        "borough": "Manhattan",
        "borough_gid": "whosonfirst:borough:421205771",
        "confidence": 0.8,
        "country": "United States",
        "country_a": "USA",
        "country_code": "US",
        "country_gid": "whosonfirst:country:85633793",
        "county": "New York County",
        "county_gid": "whosonfirst:county:102081863",
        "distance": 0.077,
        "gid": "nycpad:venue:8823",
        "housenumber": "52",
        "id": "8823",
        "label": "52 CHAMBERS STREET, New York, NY, USA",
        "layer": "venue",
        "locality": "New York",
        "locality_a": "NYC",
        "locality_gid": "whosonfirst:locality:85977539",
        "name": "52 CHAMBERS STREET",
        "neighbourhood": "City Hall Area",
        "neighbourhood_gid": "whosonfirst:neighbourhood:85865569",
        "postalcode": "10007",
        "region": "New York",
        "region_a": "NY",
        "region_gid": "whosonfirst:region:85688543",
        "source": "nycpad",
        "source_id": "8823",
        "street": "CHAMBERS STREET",
      },
      "type": "Feature",
    },
  ],
  "geocoding": {
    "attribution": "http://geosearch.planninglabs.nyc/attribution",
    "engine": {
      "author": "Mapzen",
      "name": "Pelias",
      "version": "1.0",
    },
    "query": {
      "boundary.circle.lat": 40.7128,
      "boundary.circle.lon": -74.006,
      "lang": {
        "defaulted": true,
        "iso6391": "en",
        "iso6393": "eng",
        "name": "English",
        "via": "default",
      },
      "point.lat": 40.7128,
      "point.lon": -74.006,
      "private": false,
      "querySize": 40,
      "size": 20,
    },
    "timestamp": "RESET BY SNAPSHOT TEST, WOULD BE A NUMBER LIKE \`1785874040249\`",
    "version": "0.2",
  },
  "type": "FeatureCollection",
}
`;
